
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct shader_struct {int dummy; } ;
struct TYPE_3__ {size_t num; struct shader_struct* array; } ;
struct TYPE_4__ {TYPE_1__ structs; } ;
struct gl_shader_parser {TYPE_2__ parser; } ;


 int gl_write_struct (struct gl_shader_parser*,struct shader_struct*) ;

__attribute__((used)) static inline void gl_write_structs(struct gl_shader_parser *glsp)
{
 size_t i;
 for (i = 0; i < glsp->parser.structs.num; i++) {
  struct shader_struct *st = glsp->parser.structs.array + i;
  gl_write_struct(glsp, st);
 }
}
